# SPI

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  setup.py
.github/workflows/: main_studentperfindicator.yml
artifacts/: preprocessor.pkl
catboost_log/: catboost_training.json  time_left.tsv
catboost_log/learn/: events.out.tfevents
notebook/: 1 . EDA STUDENT PERFORMANCE .ipynb
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py  train_pipeline.py
templates/: home.html
