[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SPI"
version = "0.0.1"
authors = [
  { name = "Ananthakrishnan", email = "ananthakrishnan073@gmail.com" }
]
dependencies = [
  "pandas",
  "numpy",
  "seaborn",
  "matplotlib",
  "scikit-learn",
  "catboost",
  "xgboost"
]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
